@@ -3,6 +3,10 @@
    - djm@cvs.openbsd.org 2004/02/25 00:22:45
      [sshd.c]
      typo in comment
+   - dtucker@cvs.openbsd.org 2004/02/27 22:42:47
+     [dh.c]
+     Prevent sshd from sending DH groups with a primitive generator of zero or
+     one, even if they are listed in /etc/moduli.  ok markus@
 
 20040226
  - (bal) KNF our sshlogin.c even if the code looks nothing like upstream
@@ -808,4 +812,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3261 2004/02/29 09:11:30 dtucker Exp $
+$Id: ChangeLog,v 1.3262 2004/02/29 09:12:33 dtucker Exp $
